# udo-runtime

./: .clang-format  .gitignore  CMakeLists.txt
postgres/udo/: udo_runtime.cpp  udo_runtime.h
runtime/: ChunkedStorage.hpp  UDOperator.hpp
src/udo/: AuxVec.cpp  AuxVec.hpp  ClangCompiler.cpp  ClangCompiler.hpp  CxxUDOAnalyzer.cpp  CxxUDOAnalyzer.hpp  CxxUDOCompiler.cpp  CxxUDOCompiler.hpp  CxxUDOConfig.hpp.in  CxxUDOExecution.cpp  CxxUDOExecution.hpp  DynamicTLS.cpp  DynamicTLS.hpp  LLVMCompiler.cpp  LLVMCompiler.hpp  LLVMMetadata.cpp  LLVMMetadata.hpp  LLVMUtil.hpp  ScopeGuard.hpp  Setting.cpp  Setting.hpp  StringLiteral.hpp  UDOMemoryManager.cpp  UDOMemoryManager.hpp  UDORuntime.cpp.in  UDORuntime.hpp  i18n.cpp  i18n.hpp  out.hpp
